# polars-ts

./: .gitignore  Cargo.toml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  run.py
.github/workflows/: publish_to_pypi.yml
polars_ts/: __init__.py  calendar.py  convert.py  display.py  dummy.py  dummymkt.py  frame_builder.py  futures.py  grouper.py  helpers.py  io.py  loader.py  mathx.py  param_schema.py  report.py  resample.py  sf.py  time.py  tsf.py  types.py  utils.py  with_params.py
polars_ts/calendar_helper/: __init__.py
polars_ts/convert_helper/: __init__.py
polars_ts/dummy_helper/: __init__.py
polars_ts/dummymkt_helper/: __init__.py
polars_ts/expr/: mathx.py  random.py  sf.py  time.py
polars_ts/futures_helper/: __init__.py  bbg_symbols.py  generic_symbols.py  roll_calendar.py  util.py
polars_ts/io_helper/: __init__.py
polars_ts/mathx_helper/: __init__.py
polars_ts/resample_helper/: __init__.py
polars_ts/sf_helper/: __init__.py
polars_ts/time_helper/: __init__.py
src/: expressions.rs  lib.rs  utils.rs
src/math/: ewm.rs  mod.rs
src/time/: mod.rs  utils.rs
tests/: config.py  test_rust_templates.py
tests/00_config/: currency_conversions.csv  physical_conversions.csv  physics_conversions.csv  roll_config.csv
tests/convert/: test_basic.py
tests/futures/: test_continuous_contract.py
tests/grouper/: test_grouper.py
tests/mathx/: test_cum_sum.py  test_diff.py  test_ewm_mean.py  test_shift.py
tests/param_schema/: test_param_schema.py
tests/resample/: test_resample.py
tests/sf/: test_join.py  test_join_on_list_items.py  test_sf.py
tests/time/: test_basic.py
tools/: launch.py
tools/scripts/: debug_diff.py  debug_holidays.py
