[package]
name = "polars-ts"
version = "0.0.14"
edition = "2021"

[lib]
name = "polars_ts"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.13.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.39.2", features = ["dtype-date"], default-features = false }
polars-core = { version = "0.39.2", features=["serde"], default-features = false }
polars-ops = { version = "0.39.2", features=["diff", "ewma", "pct_change"], default-features = false }
polars-time = { version = "0.39.2", features = ["dtype-date"], default-features = false }
polars-arrow = { version = "0.39.2", default-features = false }

rand = "0.8.5"
rand_distr = "0.4.3"
wyhash = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
