[project]
name = "polars-ts"
requires-python = ">=3.8"
dependencies = [
  'polars >= 0.20.23',
  'polars-xdt',
  'hvplot',
  'pyarrow'

]

[project.optional-dependencies]
dev=[
  'hvplot',
  'pyarrow'
]

[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.23"]
build-backend = "maturin"


classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
